force-app/main/default/objects/Billing_Center_KPI_Snapshot__c/Billing_Center_KPI_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Stores pre-aggregated KPI values by period.</description>
    <label>Billing Center KPI Snapshot</label>
    <nameField>
        <displayFormat>BCSNP-{00000}</displayFormat>
        <label>Billing Center KPI Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Center KPI Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>