force-app/main/default/objects/Billing_Center_KPI_Snapshot__c/fields/Calculated_On__c.field-meta.xml
<CustomField>
    <fullName>Calculated_On__c</fullName>
    <label>Calculated On</label>
    <type>DateTime</type>
</CustomField>