force-app/main/default/objects/Billing_Center_KPI_Snapshot__c/fields/Currency_Value__c.field-meta.xml
<CustomField>
    <fullName>Currency_Value__c</fullName>
    <label>Currency Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>