force-app/main/default/objects/Billing_Center_KPI_Snapshot__c/fields/KPI_Key__c.field-meta.xml
<CustomField>
    <fullName>KPI_Key__c</fullName>
    <label>KPI Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>