force-app/main/default/objects/Billing_Center_KPI_Snapshot__c/fields/Numeric_Value__c.field-meta.xml
<CustomField>
    <fullName>Numeric_Value__c</fullName>
    <label>Numeric Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>