force-app/main/default/objects/Billing_Center_KPI_Snapshot__c/fields/Period_Key__c.field-meta.xml
<CustomField>
    <fullName>Period_Key__c</fullName>
    <label>Period Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>