force-app/main/default/objects/Billing_Center_KPI_Snapshot__c/fields/Section_Key__c.field-meta.xml
<CustomField>
    <fullName>Section_Key__c</fullName>
    <label>Section Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>