force-app/main/default/objects/Billing_Center_KPI_Snapshot__c/fields/Snapshot_Status__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Status__c</fullName>
    <label>Snapshot Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>