force-app/main/default/objects/Billing_Center_KPI_Snapshot__c/fields/Source_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Count__c</fullName>
    <label>Source Record Count</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>