force-app/main/default/objects/Billing_Center_KPI_Snapshot__c/fields/Tab_Key__c.field-meta.xml
<CustomField>
    <fullName>Tab_Key__c</fullName>
    <label>Tab Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>